# randio

./: .gitignore  AUTHORS  INSTALL.md  README.md  TODO.md  meson.build
src/: randio-datatypes.h  randio-help-shortcuts.ui  randio-lastfm.c  randio-lastfm.h  randio-menu.ui  randio-prefs.c  randio-prefs.h  randio-sql.c  randio-sql.h  randio.c  randio.gresource.xml  randio.h  randio.ui
